--- a/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -79,7 +79,19 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="news_panel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="news_panel.Designer.cs">
+      <DependentUpon>news_panel.cs</DependentUpon>
+    </Compile>
     <Compile Include="postquery.cs" />
+    <Compile Include="profile_panel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="profile_panel.Designer.cs">
+      <DependentUpon>profile_panel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl1.cs">
@@ -99,6 +111,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="news_panel.resx">
+      <DependentUpon>news_panel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="profile_panel.resx">
+      <DependentUpon>profile_panel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -162,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\menu_profil_move.png" />
+    <None Include="Resources\menu_profil.png" />
+    <None Include="Resources\news_null.jpg" />
     <None Include="Resources\menu_glav_move.png" />
     <None Include="Resources\menu_glav.png" />
     <None Include="Resources\fon.png" />
